--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>search-algorithm</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -17,6 +17,10 @@
     <div class="displayArea">
       <div class="user">
         <img src="profile.png" alt="profile" />
+        <div class="data">
+          <div class="name">Mohammad Nawaz Akhtar </div>
+          <div class="email">mna19121985@gmail.com </div>
+        </div>
       </div>
     </div>
   </div>
