--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
       <input type="search" name="searchBar" id="searchBar" autocomplete="on" placeholder="search here..." />
     </div>
     <div class="displayArea">
+      <!--
       <div class="user">
         <img src="profile.png" alt="profile" />
-        <div class="data">
-          <div class="name">Mohammad Nawaz Akhtar </div>
-          <div class="email">mna19121985@gmail.com </div>
+        <div class="userData">
+          <div class="username">Mohammad Nawaz Akhtar </div>
+          <div class="userEmail">mna19121985@gmail.com </div>
         </div>
       </div>
+      -->
     </div>
   </div>
   
